Update generateCode() to have one less parameter
